--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
       <meta name="theme-color" content="#000000" />
       <meta name="description" content="Web site created using create-react-app" />
       <link href="/dist/output.css" rel="stylesheet" />
-      <title>TODO LIST</title>
+      <title>TASK HIVE</title>
    </head>
    <body>
       <noscript>You need to enable JavaScript to run this app.</noscript>
